<resources>
    <string name="app_name">cropad</string>
    <string name="rates">Rates</string>
    <string name="input">Input</string>
    <string name="etc">Weather</string>
    <string name="title_activity_price">Price</string>
    <string name="hi_welcome_to_crop_advisor">Hi! Welcome to Crop Advisor</string>
    <string name="button">Button</string>
    <string name="select_your_local_market">Select Your Local Market</string>
    <string name="search_price">Search Price</string>
    <string name="send">Send</string>
    <string-array name="crop">
        <item>Rice</item>
        <item>Wheat</item>
        <item>Brinjal</item>
        <item>Cabbage</item>
        <item>Onion</item>
        <item>Carrot</item>
        <item>Tomato</item>
        <item>Pomegranate</item>
        <item>Spinach</item>
        <item>Maize</item>
        <item>Jowar(Sorghum)</item>
    </string-array>
    <string name="deep_black">Deep Black</string>
    <string name="medium_deep">Medium Deep</string>
    <string name="shallow">Shallow</string>
    <string name="select_crop">Location:</string>
    <string name="water_amount_of_raifall_in_mm">Water(Amount of raifall in mm)</string>
    <string name="area_in_acres">Area(In Acres)</string>
    <string name="get_climate">Get Climate</string>
    <string name="analysis">Analysis</string>
    <string name="do_analysis">Do Analysis</string>
    <string name="enter_ph">Enter PH:</string>
    <string name="temperature">Temperature</string>
    <string name="your_result">Your Result!</string>
    <string name="noloc">Provide Location Permission from Settings</string>
    <string name="close">Close</string>
    <string name="use_range">Use Range</string>
    <string name="show_all_data">Show All Data</string>
    <string name="to">to</string>
    <string name="future_price">Future Price</string>
    <string-array name="market">
        <item>Akkalkot</item>
        <item>Akluj</item>
        <item>Barshi</item>
        <item>Barshi(Vairag)</item>
        <item>Dudhani</item>
        <item>Karmala</item>
        <item>Kurdwadi</item>
        <item>Kurdwadi(Modnimb)</item>
        <item>Mangal Wedha</item>
        <item>Mohol</item>
        <item>Pandharpur</item>
        <item>Sangola</item>
        <item>Solapur</item>
    </string-array>
    <string-array name="district">
        <item>Akkalkot</item>
        <item>Barshi</item>
        <item>Karmala</item>
        <item>Madha</item>
        <item>Malshiras</item>
        <item>Mangalvedhe</item>
        <item>Mohol</item>
        <item>Pandharpur</item>
        <item>Sangole</item>
        <item>Solapur-North</item>
        <item>South-Solapur</item>
    </string-array>
    <string-array name="akkalkot">
        <item>Akatnal</item>
        <item>Akkalkot</item>
        <item>Alage</item>
        <item>Andewadi</item>
        <item>Andewadi-Bk</item>
        <item>Andewadi-Kh</item>
        <item>Ankalge</item>
        <item>Arali</item>
        <item>Badole-Bk</item>
        <item>Badole-Kh</item>
        <item>Bagehalli</item>
        <item>Banjgol</item>
        <item>Barhanpur</item>
        <item>Basalegaon</item>
        <item>Basavgir</item>
        <item>Bavkarwadi</item>
        <item>Bhosgi</item>
        <item>Bhurikavathe</item>
        <item>Binjger</item>
        <item>Boblad</item>
        <item>Boregaon</item>
        <item>Borgaon</item>
        <item>Boroti-Bk</item>
        <item>Boroti-Kh</item>
        <item>Chapalgaon</item>
        <item>Chapalgaonwadi</item>
        <item>Chikkkahalli</item>
        <item>Chincholi</item>
        <item>Chungi</item>
        <item>Dahitane</item>
        <item>Dahitanewadi</item>
        <item>Darshanal</item>
        <item>Devikavathe</item>
        <item>Dharsang</item>
        <item>Dodyal</item>
        <item>Dombar-Jawalge</item>
        <item>Dudhani-</item>
        <item>Galoragi</item>
        <item>Gaudgaon-Bk</item>
        <item>Gholasgaon</item>
        <item>Ghungaregaon</item>
        <item>Gogaon</item>
        <item>Goudgaon-Kh</item>
        <item>Guddewadi</item>
        <item>Guravwadi</item>
        <item>Haidre</item>
        <item>Halchincholi</item>
        <item>Halhalli</item>
        <item>Handral</item>
        <item>Hanjagi</item>
        <item>Hannur</item>
        <item>Hasapur</item>
        <item>Hattikanbas</item>
        <item>Hilli</item>
        <item>Hingani</item>
        <item>Ibrahimpur</item>
        <item>Itage</item>
        <item>Jainapur</item>
        <item>Jakapur</item>
        <item>Jeur</item>
        <item>Jeurwadi</item>
        <item>Kadabgaon</item>
        <item>Kajikanbas</item>
        <item>Kalappawadi</item>
        <item>Kalegaon</item>
        <item>Kalhipparage</item>
        <item>Kalkarjal</item>
        <item>Kanthehalli</item>
        <item>Karajagi</item>
        <item>Karjal</item>
        <item>Kegaon-Bk</item>
        <item>Kegaon-Kh</item>
        <item>Khairat</item>
        <item>Khanapur</item>
        <item>Kini</item>
        <item>Kiniwadi</item>
        <item>Kirnalli</item>
        <item>Kolekarwadi</item>
        <item>Kolibet</item>
        <item>Konhali</item>
        <item>Korsegaon</item>
        <item>Kudal</item>
        <item>Kumthe</item>
        <item>Kurnur</item>
        <item>Mahalaxminagar</item>
        <item>Maindargi</item>
        <item>Mamdabad</item>
        <item>Mangrul</item>
        <item>Marathwadi</item>
        <item>Matanhalli</item>
        <item>Mhaisalage</item>
        <item>Mhetre</item>
        <item>Mirajgi</item>
        <item>Motyal</item>
        <item>Mugali</item>
        <item>Mundhewadi</item>
        <item>Naganhalli</item>
        <item>Nagansur</item>
        <item>Nagore</item>
        <item>Nanhegaon</item>
        <item>Navindgi</item>
        <item>Nimgaon</item>
        <item>Palapur</item>
        <item>Parmanandnagar</item>
        <item>Pitapur</item>
        <item>Rampur</item>
        <item>Ramtirth</item>
        <item>Ruddewadi</item>
        <item>Sadalapur</item>
        <item>Safale</item>
        <item>Salgar</item>
        <item>Samarthnagar</item>
        <item>Sangavi-Bk</item>
        <item>Sangavi-Kh</item>
        <item>Sangogi-</item>
        <item>Sangogi-Aland</item>
        <item>Satan-Dudhani</item>
        <item>Sevalalnagar</item>
        <item>Sevanagar</item>
        <item>Shawal</item>
        <item>Shegaon</item>
        <item>Shirasi</item>
        <item>Shirwal</item>
        <item>Shirwalwadi</item>
        <item>Sindkhed</item>
        <item>Sinnur</item>
        <item>Solase-Lamantanda</item>
        <item>Sulerjawalaga</item>
        <item>Sultanpur</item>
        <item>Tadwal</item>
        <item>Talewad</item>
        <item>Tolnur</item>
        <item>Torani</item>
        <item>Udagi</item>
        <item>Umarge</item>
        <item>Vasantrao-Naik-Nagar-</item>
        <item>Vijaynagar</item>
        <item>Wagdari</item>
    </string-array>
    <string-array name="barshi">
        <item>Agalgaon</item>
        <item>Alipur</item>
        <item>Aljapur</item>
        <item>Ambabaiwadi</item>
        <item>Ambegaon</item>
        <item>Arangaon</item>
        <item>Babhulgaon</item>
        <item>Balewadi</item>
        <item>Barshi</item>
        <item>Bavi</item>
        <item>Belgaon</item>
        <item>Bhalgaon</item>
        <item>Bhandegaon</item>
        <item>Bhansale</item>
        <item>Bhatambare</item>
        <item>Bhoinje</item>
        <item>Bhoyare</item>
        <item>Borgaon-(Zadi)</item>
        <item>Borgaon-Kh.</item>
        <item>Chare</item>
        <item>Chikharde</item>
        <item>Chinchkhopan</item>
        <item>Chincholi</item>
        <item>Chumb</item>
        <item>Dadshinge</item>
        <item>Dahitane</item>
        <item>Devgaon</item>
        <item>Dhamangaon-(A)</item>
        <item>Dhamgaon-(Dumala)</item>
        <item>Dhanore</item>
        <item>Dhebarewadi</item>
        <item>Dhorale</item>
        <item>Dhotre</item>
        <item>Gadegaon</item>
        <item>Gatachiwadi</item>
        <item>Gaudgaon</item>
        <item>Ghanegaon</item>
        <item>Ghari</item>
        <item>Gholvewadi</item>
        <item>Godasewadi</item>
        <item>Gormale</item>
        <item>Gulpoli</item>
        <item>Halduge</item>
        <item>Hattij</item>
        <item>Hingani-(Pangaon)</item>
        <item>Hingani-(Ratanjan)</item>
        <item>Indapur</item>
        <item>Irle</item>
        <item>Irlewadi</item>
        <item>Jahanpur</item>
        <item>Jamgaon-(Agalgaon)</item>
        <item>Jamgaon-(P)</item>
        <item>Jawalgaon</item>
        <item>Jotibachiwadi</item>
        <item>Kalambawadi-(A)</item>
        <item>Kalambwadi-(P)</item>
        <item>Kalegaon</item>
        <item>Kandalgaon</item>
        <item>Kapasi</item>
        <item>Kari</item>
        <item>Kasari</item>
        <item>Kasarwadi</item>
        <item>Kategaon</item>
        <item>Kavhe</item>
        <item>Khadkalgaon</item>
        <item>Khadkoni</item>
        <item>Khamgaon</item>
        <item>Khandavi</item>
        <item>Koregaon</item>
        <item>Korfale</item>
        <item>Kuslamb</item>
        <item>Ladole</item>
        <item>Lakshyachiwadi</item>
        <item>Mahagaon</item>
        <item>Malegaon</item>
        <item>Malegaon</item>
        <item>Malwandi</item>
        <item>Mamdapur</item>
        <item>Mandegaon</item>
        <item>Manegaon</item>
        <item>Mirzanpur</item>
        <item>Mouje-Tadwale</item>
        <item>Mungashi-(R)</item>
        <item>Mungashi-(Va)</item>
        <item>Nagobachiwadi</item>
        <item>Nandani</item>
        <item>Nari-(Bhandewadi)</item>
        <item>Nariwadi</item>
        <item>Nimbalak</item>
        <item>Pandhari</item>
        <item>Pangaon</item>
        <item>Pangri</item>
        <item>Pathari</item>
        <item>Phaphalwadi</item>
        <item>Pimpalgaon-(Dhas)</item>
        <item>Pimpalgaon-(Pangaon)</item>
        <item>Pimpalgaon-(Pangri)</item>
        <item>Pimpalwadi</item>
        <item>Pimpari-(Pangaon)</item>
        <item>Pimpri-(Ratanjan)</item>
        <item>Puri</item>
        <item>Raleras</item>
        <item>Rastapur</item>
        <item>Ratanjan</item>
        <item>Raulgaon</item>
        <item>Rui</item>
        <item>Sakat</item>
        <item>Sangamner</item>
        <item>Sarjapur</item>
        <item>Sarole</item>
        <item>Sasure</item>
        <item>Saundare</item>
        <item>Sawargaon</item>
        <item>Shelgaon-(Markad)</item>
        <item>Shelgaon-(R)</item>
        <item>Shelgaon-(Vhale)</item>
        <item>Shendri</item>
        <item>Shirale</item>
        <item>Shripat-Pimpri</item>
        <item>Surdi</item>
        <item>Tadsoudne</item>
        <item>Tambewadi</item>
        <item>Tandulwadi</item>
        <item>Tawadi</item>
        <item>Turk-Pimpri</item>
        <item>Ukadgaon</item>
        <item>Umbarge</item>
        <item>Undegaon</item>
        <item>Upalai-(Thonge)</item>
        <item>Upale-(Dumala)</item>
        <item>Vairag</item>
        <item>Wagachiwadi</item>
        <item>Walwad</item>
        <item>Wanewadi</item>
        <item>Wangarwadi</item>
        <item>Yawali</item>
        <item>Yelamb</item>
        <item>Zadi</item>
        <item>Zaregaon</item>
    </string-array>
</resources>