<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".analysis">

    <EditText
        android:id="@+id/to"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:clickable="true"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintBottom_toTopOf="@+id/analyse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/from"
        app:layout_constraintTop_toBottomOf="@+id/option"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/locate"
        android:layout_width="352dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <Spinner
        android:id="@+id/crop12"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locate"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/analyse"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#008577"
        android:text="@string/do_analysis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crop12"
        app:layout_constraintVertical_bias="0.32999998" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="0dp"
        android:layout_height="200dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/analyse"
        app:layout_constraintVertical_bias="0.42000002" />

    <RadioGroup
        android:id="@+id/option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">


        <RadioButton
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_range"

            app:layout_constraintStart_toEndOf="@+id/deep"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:text="@string/show_all_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RadioGroup>

    <EditText
        android:id="@+id/from"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:ems="10"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintBottom_toTopOf="@+id/analyse"
        app:layout_constraintEnd_toStartOf="@+id/to"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option"
        app:layout_constraintVertical_bias="0.507"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintBottom_toTopOf="@+id/analyse"
        app:layout_constraintEnd_toStartOf="@+id/to"
        app:layout_constraintStart_toEndOf="@+id/from"
        app:layout_constraintTop_toBottomOf="@+id/option" />
</android.support.constraint.ConstraintLayout>